# s2mgrs

./: MANIFEST.in  README.md  pyproject.toml  setup.py
s2mgrs/: __init__.py  myfunctions.py  points.csv  s2tile.py  tiles.csv
tests/: test_myfunctions.py
